// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Css output 1`] = `
"import _createComponent from 'cssta/lib/web/createComponent';


const Component = _createComponent('button', null, {
  'defaultClassName': 'A',
  'classNameMap': {}
});"
`;

exports[`Css output 2`] = `
"/* File generated by babel-plugin-cssta */

/* Start unknown */
.A {
    color: red
}
/* End unknown */
"
`;

exports[`Css output overwriting files 1`] = `
"import _createComponent from 'cssta/lib/web/createComponent';


const Component = _createComponent('button', null, {
  'defaultClassName': 'A',
  'classNameMap': {}
});"
`;

exports[`Css output overwriting files 2`] = `
"import _createComponent from 'cssta/lib/web/createComponent';


const Component = _createComponent('button', null, {
  'defaultClassName': 'B',
  'classNameMap': {}
});"
`;

exports[`Css output overwriting files 3`] = `
"/* File generated by babel-plugin-cssta */

/* Start input1.js */
.B {
    color: blue
}
/* End input1.js */
"
`;

exports[`Css output overwriting files with multiple files 1`] = `
"import _createComponent from 'cssta/lib/web/createComponent';

const Component = _createComponent('button', null, {
      'defaultClassName': 'A',
      'classNameMap': {}
});"
`;

exports[`Css output overwriting files with multiple files 2`] = `
"import _createComponent from 'cssta/lib/web/createComponent';

const Component = _createComponent('button', null, {
      'defaultClassName': 'D',
      'classNameMap': {}
});"
`;

exports[`Css output overwriting files with multiple files 3`] = `
"import _createComponent from 'cssta/lib/web/createComponent';

const Component = _createComponent('button', null, {
      'defaultClassName': 'C',
      'classNameMap': {}
});"
`;

exports[`Css output overwriting files with multiple files 4`] = `
"/* File generated by babel-plugin-cssta */

/* Start input1.js */
.A {
    color: red
}
/* End input1.js */

/* Start input2.js */
.D {
    color: blue
}
/* End input2.js */

/* Start input3.js */
.C {
    color: green
}
/* End input3.js */
"
`;

exports[`Css output with multiple files 1`] = `
"import _createComponent from 'cssta/lib/web/createComponent';


const Component = _createComponent('button', null, {
  'defaultClassName': 'A',
  'classNameMap': {}
});"
`;

exports[`Css output with multiple files 2`] = `
"import _createComponent from 'cssta/lib/web/createComponent';


const Component = _createComponent('button', null, {
  'defaultClassName': 'B',
  'classNameMap': {}
});"
`;

exports[`Css output with multiple files 3`] = `
"/* File generated by babel-plugin-cssta */

/* Start input1.js */
.A {
    color: red
}
/* End input1.js */

/* Start input2.js */
.B {
    color: blue
}
/* End input2.js */
"
`;
